# ztop

./: .prettierignore  bun.lockb  components.json  eslint.config.js  package.json  prettier.config.js  svelte.config.js
backend/: Cargo.toml  settings.toml  tauri.conf.json
backend/src/: lib.rs  main.rs
backend/src/commands/: cpu.rs  memory.rs  mod.rs
backend/src/core/: error.rs  init.rs  mod.rs  settings.rs  state.rs
backend/src/modules/: mod.rs
backend/src/modules/adapters/: mod.rs  sysinfo.rs
backend/src/modules/cpu/: model.rs  sysinfo.rs
backend/src/modules/memory/: mod.rs  model.rs  sysinfo.rs
src/: app.css
src/components/ui/: button.svelte
src/lib/services/: cpu.ts
src/lib/utils/: bindings.ts  tauri.ts
src/routes/: +layout.svelte  +page.svelte
