[package]
name = "ztop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ztop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_toml = "0.0.1"

sysinfo = "0.33"

thiserror = "2"
tracing = "0.1"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }

once_cell = "1.20"
config = "0.14.1"

[dev-dependencies]
assert_cmd = { version = "2", features = ["color-auto"] }
assert_fs = { version = "1", features = ["color-auto"] }
pretty_assertions = "1"
testresult = "0.4"
